message db_tb_user 
{
required int32 id = 1;
required string user_name = 2;
}
